--- a/.github/workflows/main_saleck-test-spring.yml
+++ b/.github/workflows/main_saleck-test-spring.yml
@@ -17,15 +17,17 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Java version
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
       - name: Build with Maven
         run: mvn clean install
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
@@ -41,12 +43,12 @@ jobs:
   
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: java-app
       
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A2A20FBF014F4BF98876AF4125D871EB }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8F0122DBC5574CD6A98790467FE0F501 }}
