--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.application.name=test-base-spring
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASS}
-jwt.secret=${JWT_SECRET}
+spring.profiles.active=${ENVIRONMENT:local}
