--- a/.github/workflows/main_saleck-test-spring.yml
+++ b/.github/workflows/main_saleck-test-spring.yml
@@ -24,6 +24,12 @@ jobs:
           cache: maven
 
       - name: Build with Maven
+        env: 
+          MYSQL_URL: ${{ vars.MYSQL_URL }}
+          MYSQL_USER: ${{ vars.MYSQL_USER }}
+          MYSQL_PASS: ${{ secrets.MYSQL_PASS }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
         run: mvn clean install
 
       - name: Upload artifact for deployment job
