--- a/.github/workflows/main_saleck-test-spring.yml
+++ b/.github/workflows/main_saleck-test-spring.yml
@@ -31,6 +31,10 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
         run: mvn clean install
+      
+      - name: See env variables
+        run: echo "${{env.MYSQL_URL}}"
+          echo "${{env.MYSQL_USER}}"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
