--- a/.github/workflows/main_saleck-test-spring.yml
+++ b/.github/workflows/main_saleck-test-spring.yml
@@ -32,9 +32,7 @@ jobs:
           cache: maven
 
       - name: See env variables
-        run: echo "${{env.MYSQL_URL}}"
-          echo "${{env.MYSQL_USER}}"
-          echo "${{secrets.MYSQL_PASS}}"
+        run: echo "mysql url $MYSQL_URL"
 
       - name: Build with Maven
         run: mvn clean install
