--- a/.github/workflows/main_saleck-test-spring.yml
+++ b/.github/workflows/main_saleck-test-spring.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - saleck-test-spring
+name: Build and deploy to Azure - enviroment ${{ vars.ENV_CONTEXT_VAR}}
 
 on:
   push:
@@ -23,6 +23,7 @@ jobs:
           MYSQL_PASS: ${{ secrets.MYSQL_PASS }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           ENVIRONMENT: ${{ env.ENVIRONMENT }}
+          REPO_VAR: ${{env.REPO_VAR}}
 
       - name: Set up Java version
         uses: actions/setup-java@v4
@@ -32,7 +33,10 @@ jobs:
           cache: maven
 
       - name: See env variables
-        run: echo "mysql url $MYSQL_URL"
+        run: |
+          echo "mysql url $MYSQL_URL"
+          echo "repo_var $REPO_VAR"
+          echo "direct repo_var ${{env.REPO_VAR}}"
 
       - name: Build with Maven
         run: mvn clean install
