--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=MYSQL_URL
-spring.datasource.username=MYSQL_USER
-spring.datasource.password=MYSQL_PASS
-jwt.secret=JWT_SECRET
+spring.datasource.url=jdbc:mysql://localhost:3306/lecti
+spring.datasource.username=root
+spring.datasource.password=sAlEck&lAptOp&mysql
+jwt.secret=h21S8vZQ8YWcxgHmDyBZnPJ72q1LUDvT
