--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/lecti
-spring.datasource.username=root
-spring.datasource.password=sAlEck&lAptOp&mysql
+spring.datasource.url=jdbc:mysql://lecti-mysql.mysql.database.azure.com:3306/lecti
+spring.datasource.username=lecti
+spring.datasource.password=L3cti2024
 jwt.secret=h21S8vZQ8YWcxgHmDyBZnPJ72q1LUDvT
