--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:mysql://lecti-mysql.mysql.database.azure.com:3306/lecti
+spring.datasource.url=jdbc:mysql://lecti-mysql.mysql.database.azure.com:3306/lecti?\
+  useUnicode=true&\
+  characterEncoding=UTF-8&characterSetResults=UTF-8&\
+  verifyServerCertificate=true&\
+  useSSL=true&\
+  requireSSL=true
 spring.datasource.username=lecti
-spring.datasource.password=L3cti2024
+spring.datasource.password=L3ctiprod
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret=h21S8vZQ8YWcxgHmDyBZnPJ72q1LUDvT
